feat: dashboard post

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -53,3 +53,25 @@
 [x-cloak] {
     display: none;
 }
+
+
+.d-active {
+    background-color: white !important;
+    color: black !important;
+}
+
+.bg-primary-500 {
+    @apply bg-blue-500;
+}
+
+.bg-primary-700 {
+    @apply bg-blue-700;
+}
+
+.bg-primary-600 {
+    @apply bg-blue-600;
+}
+
+.bg-neutral-100 {
+    @apply bg-gray-300
+}
